--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">ImposterOS Launcher</string>
+    <string name="app_name_debug">(D)imposterOS Launcher</string>
+    <string name="app_name_release">imposterOS Launcher</string>
 </resources>
